Fix some issues with callbacks on summary load and expand/collapse.

--- a/public/css/default.css
+++ b/public/css/default.css
@@ -47,6 +47,10 @@
   text-transform: uppercase;
 }
 
+.deckster-card .deckster-card-control {
+  display: none;
+}
+
 
 /*.controls {
   margin-bottom: 20px;
